jquery is now connected, button added to calculate

--- a/main.css
+++ b/main.css
@@ -65,7 +65,6 @@ html, body {
 }
 
 .big-number {
-    position: fixed;
     margin: 0 auto;
     margin-top: 0;
 }
@@ -73,16 +72,31 @@ html, body {
 .defense {
     font-size: 2em;
     font-family: sans-serif;
+    position: fixed;
+}
+
+.department {
+    margin-top: 10px;
+}
+
+.list {
+    margin-left: 10px;
 }
 
 #departments {
     float: left;
-    max-width: 370px;
+    max-width: 270px;
+    position: relative;
 }
 
 #cuts {
-    float left;
-    max-width: 370px;
+    float: right;
+    max-width: 100px;
+    position: relative;
+}
+
+.class {
+    margin-bottom: 1px;
 }
 
 
