--- a/main.css
+++ b/main.css
@@ -68,7 +68,7 @@ html, body {
     background-image: url(https://media.giphy.com/media/ADgfsbHcS62Jy/giphy.gif);
     max-width: 100%;
     position: relative;
-    height: 30vh;
+    height: 100vh;
     overflow: hidden;
 }
 
@@ -83,7 +83,7 @@ html, body {
     color: white;
     font-family: sans-serif;
     text-align: center;
-    margin-top: 25%;
+    margin-top: 33vh;
     text-shadow: 5px 5px black;
     margin-left: 12%;
     /*margin: 0 auto;*/
@@ -117,10 +117,17 @@ html, body {
     background-color: lightgrey;
     display: block;
     z-index: 4;
+    left: 0px;
+    right: 0px;
 }
 
 #top-text {
     font-size: 1.5em;
+}
+
+.billion {
+    font-weight: bold;
+    font-size: 2em;
 }
 
 .defense {
