--- a/main.css
+++ b/main.css
@@ -111,7 +111,7 @@ html, body {
     margin: 0 auto;
     margin-top: 0;
     font-size: 3em;
-    /*position: fixed;*/
+    height: 10vh;
     width: 100%;
     left: 0;
     background-color: lightgrey;
@@ -131,9 +131,9 @@ html, body {
 }
 
 .defense {
-    font-size: 2em;
+    font-size: 1em;
     font-family: sans-serif;
-    position: fixed;
+    /*position: fixed;*/
 }
 
 .department {
