--- a/main.css
+++ b/main.css
@@ -64,6 +64,32 @@ html, body {
     font-size: 16px;
 }
 
+p {
+    font-family: sans-serif;
+}
+
+h1 {
+    font-family: sans-serif;
+}
+
+input {
+    font-family: sans-serif;
+}
+
+summary {
+    font-family: sans-serif;
+}
+
+ul {
+    font-family: sans-serif;
+}
+
+.hold-text {
+    text-align: center;
+    width: 100%;
+    margin-left: 0px;
+}
+
 #title {
     background-image: url(https://media.giphy.com/media/ADgfsbHcS62Jy/giphy.gif);
     max-width: 100%;
@@ -78,16 +104,22 @@ html, body {
     position: relative;
 }*/
 
+.top-text {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 8px;
+    margin-right: 8px;
+}
+
 .big-text {
-    position: absolute;
+    /*position: absolute;*/
     color: white;
     font-family: sans-serif;
     text-align: center;
     margin-top: 33vh;
     text-shadow: 5px 5px black;
-    margin-left: 12%;
     /*margin: 0 auto;*/
-    font-size: 2.5em;
+    font-size: 5.5em;
     text-decoration: underline;
 }
 
@@ -101,24 +133,28 @@ html, body {
     color: white;
     font-family: sans-serif;
     text-align: center;
-    margin: 0 auto;
     font-size: 1.3em;
     text-shadow: 3px 3px black;
-    margin-top: 47%;
+    margin-top: 22vh;
+    text-align: center;
+    width: 100%;
 }
 
 #big-number {
-    margin: 0 auto;
+    /*margin: 0 auto;*/
     margin-top: 0;
     font-size: 3em;
     height: 10vh;
     width: 100%;
     left: 0;
-    background-color: lightgrey;
+    background-color: black;
     display: block;
     z-index: 4;
     left: 0px;
     right: 0px;
+    text-align: center;
+    padding-top: 5%;
+    /*position: absolute;*/
 }
 
 #top-text {
@@ -128,24 +164,35 @@ html, body {
 .billion {
     font-weight: bold;
     font-size: 2em;
+    text-align: center;
+    padding-top: 8px;
 }
 
 .defense {
     font-size: 1em;
     font-family: sans-serif;
+    color: white;
+    text-align: center;
+    padding-top: 8px;
     /*position: fixed;*/
+}
+
+.dollar-sign {
+    font-size: 1em;
+    font-family: sans-serif;
+    color: white;
 }
 
 .department {
     margin-top: 10px;
 }
 
-.list {
-    margin-left: 10px;
+.checked {
+    text-decoration: line-through;
 }
 
-.hold-text {
-    margin: 10px;
+.list {
+    margin-left: 10px;
 }
 
 #departments {
