--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-/*
+                    /*
 This is a good layout for a mobile-first CSS template.
 Following this flow will minimize the number of styles you need to write and will ensure you are thinking, designing and developing mobile-first.
 Most of your styles get written like standard CSS, but for your mobile presentation. Generally speaking, a good mobile presention will stretch out nicely for larger screens.
@@ -6,223 +6,238 @@ Most of your styles get written like standard CSS, but for your mobile presentat
 Sometimes, when we stretch out to larger screens, we need to make minor tweaks for the larger devices -- you can make these tweaks in the tablet media query, or if the issue exists on desktop only, the desktop media query.
 You will find this is far easier than the opposite task of using CSS to cram your desktop experience into a mobile device.
 */
-
-
-/* http://meyerweb.com/eric/tools/css/reset/
+                /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
-
-
-/* THIS IS A RESET
+                /* THIS IS A RESET
 DO NOT EDIT THIS STUFF */
 
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    vertical-align: baseline;
-}
+                html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+                    margin: 0;
+                    padding: 0;
+                    border: 0;
+                    vertical-align: baseline;
+                }
+                /* HTML5 display-role reset for older browsers */
 
+                article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+                    display: block;
+                }
 
-/* HTML5 display-role reset for older browsers */
+                body {
+                    line-height: 1;
+                }
 
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-    display: block;
-}
+                ol, ul {
+                    list-style: none;
+                }
 
-body {
-    line-height: 1;
-}
+                blockquote, q {
+                    quotes: none;
+                }
 
-ol, ul {
-    list-style: none;
-}
+                blockquote:before, blockquote:after, q:before, q:after {
+                    content: '';
+                    content: none;
+                }
 
-blockquote, q {
-    quotes: none;
-}
+                table {
+                    border-collapse: collapse;
+                    border-spacing: 0;
+                }
+                /* BEGIN YOUR STYLES HERE */
+                /* Start your base/mobile styles here */
 
-blockquote:before, blockquote:after, q:before, q:after {
-    content: '';
-    content: none;
-}
+                html, body {
+                    /* Sets default font-size to 16px, ensuring 1em = 16px; */
+                    font-size: 16px;
+                }
 
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
+                p {
+                    font-family: sans-serif;
+                }
 
+                h1 {
+                    font-family: sans-serif;
+                }
 
-/* BEGIN YOUR STYLES HERE */
+                input {
+                    font-family: sans-serif;
+                }
 
+                summary {
+                    font-family: sans-serif;
+                }
 
-/* Start your base/mobile styles here */
+                ul {
+                    font-family: sans-serif;
+                }
 
-html, body {
-    /* Sets default font-size to 16px, ensuring 1em = 16px; */
-    font-size: 16px;
-}
+                .hold-text {
+                    /*text-align: center;*/
+                    width: 100%;
+                    margin-left: 0px;
+                }
 
-p {
-    font-family: sans-serif;
-}
-
-h1 {
-    font-family: sans-serif;
-}
-
-input {
-    font-family: sans-serif;
-}
-
-summary {
-    font-family: sans-serif;
-}
-
-ul {
-    font-family: sans-serif;
-}
-
-.hold-text {
-    text-align: center;
-    width: 100%;
-    margin-left: 0px;
-}
-
-#title {
-    background-image: url(https://media.giphy.com/media/ADgfsbHcS62Jy/giphy.gif);
-    max-width: 100%;
-    position: relative;
-    height: 100vh;
-    overflow: hidden;
-}
-
-
-/*.giphy-embed {
+                #title {
+                    background-image: url(https://media.giphy.com/media/ADgfsbHcS62Jy/giphy.gif);
+                    max-width: 100%;
+                    position: relative;
+                    height: 100vh;
+                    overflow: hidden;
+                }
+                /*.giphy-embed {
     max-width: 100%;
     position: relative;
 }*/
 
-.top-text {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 8px;
-    margin-right: 8px;
-}
+                .top-text {
+                    margin-top: 10px;
+                    margin-bottom: 10px;
+                    margin-left: 8px;
+                    margin-right: 8px;
+                }
 
-.big-text {
-    /*position: absolute;*/
-    color: white;
-    font-family: sans-serif;
-    text-align: center;
-    margin-top: 33vh;
-    text-shadow: 5px 5px black;
-    /*margin: 0 auto;*/
-    font-size: 5.5em;
-    text-decoration: underline;
-}
+                .big-text {
+                    /*position: absolute;*/
+                    color: #fff;
+                    font-family: sans-serif;
+                    text-align: center;
+                    margin-top: 33vh;
+                    text-shadow: 5px 5px black;
+                    /*margin: 0 auto;*/
+                    font-size: 5.5em;
+                    text-decoration: underline;
+                }
 
-.sticky {
-    position: fixed;
-    top: 0;
-}
+                .sticky {
+                    position: fixed;
+                    top: 0;
+                }
 
-.byline {
-    position: absolute;
-    color: white;
-    font-family: sans-serif;
-    text-align: center;
-    font-size: 1.3em;
-    text-shadow: 3px 3px black;
-    margin-top: 22vh;
-    text-align: center;
-    width: 100%;
-}
+                .byline {
+                    position: absolute;
+                    color: #fff;
+                    font-family: sans-serif;
+                    text-align: center;
+                    font-size: 1.1em;
+                    text-shadow: 3px 3px #000;
+                    margin-top: 22vh;
+                    text-align: center;
+                    width: 100%;
+                }
 
-#big-number {
-    /*margin: 0 auto;*/
-    margin-top: 0;
-    font-size: 3em;
-    height: 10vh;
-    width: 100%;
-    left: 0;
-    background-color: black;
-    display: block;
-    z-index: 4;
-    left: 0px;
-    right: 0px;
-    text-align: center;
-    padding-top: 5%;
-    /*position: absolute;*/
-}
+                #big-number {
+                    /*margin: 0 auto;*/
+                    margin-top: 0;
+                    font-size: 3em;
+                    height: 10vh;
+                    width: 100%;
+                    left: 0;
+                    background-color: #000;
+                    display: block;
+                    z-index: 4;
+                    left: 0px;
+                    right: 0px;
+                    text-align: center;
+                    padding-top: 5%;
+                    /*position: absolute;*/
+                }
 
-#top-text {
-    font-size: 1.5em;
-}
-
+                #top-text {
+                    font-size: 1.5em;
+                }
+                /*
 .billion {
     font-weight: bold;
     font-size: 2em;
     text-align: center;
     padding-top: 8px;
-}
+}*/
 
-.defense {
-    font-size: 1em;
-    font-family: sans-serif;
-    color: white;
-    text-align: center;
-    padding-top: 8px;
-    /*position: fixed;*/
-}
+                .defense {
+                    font-size: 1em;
+                    font-family: sans-serif;
+                    color: #fff;
+                    text-align: center;
+                    padding-top: 8px;
+                    /*position: fixed;*/
+                }
 
-.dollar-sign {
-    font-size: 1em;
-    font-family: sans-serif;
-    color: white;
-}
+                .dollar-sign {
+                    font-size: .85em;
+                    font-family: sans-serif;
+                    color: #fff;
+                }
 
-.department {
-    margin-top: 10px;
-}
+                .department {
+                    margin-top: 10px;
+                }
 
-.subset:checked+.list {
-    text-decoration: line-through;
-    color: gray;
-}
+                .subset:checked+.list {
+                    text-decoration: line-through;
+                    color: #ccc;
+                }
 
-.list {
-    margin-left: 10px;
-}
+                .list {
+                    margin-left: 10px;
+                }
 
-#departments {
-    float: left;
-    /*max-width: 270px;*/
-    position: relative;
-}
+                #departments {
+                    float: left;
+                    /*max-width: 270px;*/
+                    position: relative;
+                    padding-right: 30px;
+                    padding-left: 2%
+                }
 
-#cuts {
-    float: right;
-    max-width: 100px;
-    position: relative;
-}
+                #cuts {
+                    float: right;
+                    max-width: 100px;
+                    position: relative;
+                }
 
-.class {
-    margin-bottom: 1px;
-}
+                .class {
+                    margin-bottom: 1px;
+                }
 
+                summary {
+                    font-size: 1.2em;
+                    line-height: 1.2;
+                }
+                /* Tablet/Desktop overrides */
 
-/* Tablet/Desktop overrides */
+                @media(min-width: 681px) {
+                    .hold-text {
+                        max-width: 640px;
+                        margin: 0 auto;
+                    }
+                    .big-text {
+                        font-size: 7.5em;
+                    }
+                    /* Any adjustments for tablets and larger go here. Note these styles will be applied to anything 681px or larger -- so tablet AND desktop */
+                }
 
-@media(min-width: 681px) {
-    .hold-text {
-        max-width: 640px;
-        margin: 0 auto;
-    }
-    /* Any adjustments for tablets and larger go here. Note these styles will be applied to anything 681px or larger -- so tablet AND desktop */
-}
-
-@media(min-width: 729px) {
-    /* Any adjustments for desktop and larger go here. Note these styles will be applied to anything 729px or larger -- so desktop */
-}
+                @media(min-width: 729px) {
+                    /* Any adjustments for desktop and larger go here. Note these styles will be applied to anything 729px or larger -- so desktop */
+                    #big-number {
+                        font-size: 5.5em;
+                        height: 15vh;
+                    }
+                    .big-text {
+                        font-size: 9em;
+                        padding: 2%;
+                        text-shadow: 7px 7px #000;
+                    }
+                    .byline {
+                        font-size: 3em;
+                        text-shadow: 3px 3px #000;
+                    }
+                    #departments {
+                        float: left;
+                        /*max-width: 270px;*/
+                        position: relative;
+                        padding-right: 60px;
+                        padding-left: 1%;
+                    }
