--- a/main.css
+++ b/main.css
@@ -32,7 +32,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 }
 
 body {
-    line-height: 1;
+    line-height: 1.15;
 }
 
 ol, ul {
@@ -92,6 +92,7 @@ ul {
     position: relative;
     height: 100vh;
     overflow: hidden;
+    margin-bottom: 20px;
 }
 
 
@@ -100,12 +101,16 @@ max-width: 100%;
 position: relative;
 }*/
 
+p {
+    padding: .2em;
+}
+
 .top-text {
-    margin-top: 35px;
+    margin-top: 10px;
     margin-bottom: 10px;
     margin-left: 8px;
     margin-right: 8px;
-    font-size: 1.5em
+    font-size: 1.2em
 }
 
 .big-text {
@@ -160,10 +165,6 @@ position: relative;
     text-align: center;
     padding-top: 5%;
     /*position: absolute;*/
-}
-
-#top-text {
-    font-size: 1.5em;
 }
 
 
