pulling again because its fucked# Your branch and 'origin/master' have diverged,

--- a/main.css
+++ b/main.css
@@ -316,6 +316,11 @@ img.photo {
     padding-top: 5%;
 }
 
+.icon {
+    max-width: 25%;
+    margin: 0 auto;
+}
+
 
 /* Tablet/Desktop overrides */
 
