--- a/main.css
+++ b/main.css
@@ -66,6 +66,7 @@ html, body {
 
 p {
     font-family: sans-serif;
+    padding: .2em;
 }
 
 h1 {
@@ -101,16 +102,12 @@ max-width: 100%;
 position: relative;
 }*/
 
-p {
-    padding: .2em;
-}
-
 .top-text {
     margin-top: 10px;
     margin-bottom: 10px;
     margin-left: 8px;
     margin-right: 8px;
-    font-size: 1.2em
+    font-size: 1.2em;
 }
 
 .big-text {
@@ -255,6 +252,47 @@ input[type=checkbox]:checked+.select_all {
     /*vertical-align: top;*/
 }
 
+blockquote {
+    width: 65%;
+    text-align: center;
+    padding: 0px;
+    margin: 30px auto 30px auto;
+    font-size: 1.4em;
+    line-height: 1.8em;
+    position: relative;
+}
+
+blockquote p::before, blockquote p::after {
+    font-size: 3em;
+    color: #D07E50;
+    font-family: ‘georgia’;
+    position: absolute;
+}
+
+blockquote p::before {
+    content: ‘\201c’;
+    display: inline-block;
+    padding-right: 10px;
+    left: -3px;
+}
+
+blockquote p::after {
+    content: ‘\201d’;
+    display: inline-block;
+    padding-left: 10px;
+    bottom: 40px;
+}
+
+blockquote footer cite {
+    display: block;
+    font-family: ‘Helvetica’, sans-serif;
+    font-size: .6em;
+    font-style: normal;
+    line-height: 1.2em;
+    text-align: right;
+    color: #888;
+}
+
 .summary-details {
     padding-left: 20px;
 }
@@ -266,7 +304,7 @@ input[type=checkbox]:checked+.select_all {
 }
 
 .progress_container {
-    background-color: white;
+    background-color: #fff;
     height: 25px;
 }
 
@@ -282,7 +320,7 @@ input[type=checkbox]:checked+.select_all {
     width: 85%;
     height: 25px;
     background-color: #F5F5F5;
-    position: absolute
+    position: absolute;
 }
 
 #reset {
@@ -295,7 +333,7 @@ input[type=checkbox]:checked+.select_all {
 }
 
 #bottom {
-    max-width: 100%;
+    width: 100%;
     left: 0;
     bottom: 0;
     position: sticky;
